--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>3D CSS cube, use arrow keys to rotate &mdash; Paul Hayes</title>
-    <meta name="author" content="Paul Hayes" />
+    <meta name="author" content="" />
     <link rel="canonical" href="https://paulrhayes.com/experiments/cube-3d/" />
     <link rel="stylesheet" href="../experiment-styles.css" />
 
