--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Leo Faria" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="canonical" href="https://paulrhayes.com/experiments/cube-3d/touch.html" />
-    <link rel="stylesheet" href="../experiment-styles.css" />
+    <link rel="stylesheet" href="./experiment-styles.css" />
     <link rel="stylesheet" href="css/form.css" />
     <link rel="stylesheet" href="css/touch.css" />
     <link rel="stylesheet" href="css/works.css" />
@@ -257,7 +257,7 @@ https://dribbble.com/shots/1677163-Menu portifolio
  </div>
  <div id="floatclose" class="floatclose" onclick="closeweb()"><h5 style="color: antiquewhite;"><a href="#portifolio">X - FECHAR | VOLTAR </br>PARA MENU MOBILE</a></h5></div>
  <div id="mobile_up">
-   <iframe id="ifr" name="ifr" src="../celphone.html" width="100%" height="700px" ></iframe> 
+   <iframe id="ifr" name="ifr" src="celphone.html" width="100%" height="700px" ></iframe> 
 </div>
  
 <!--projects style="display: none;
@@ -375,7 +375,7 @@ https://dribbble.com/shots/1677163-Menu portifolio
 
      fim projects--> 
      <div id="portifolioweb">
-     <iframe src="../Projetos.html" width="100%" height="700px"></iframe> 
+     <iframe src="Projetos.html" width="100%" height="700px"></iframe> 
      </div>
 <section id="contato"></section>
 
@@ -439,7 +439,7 @@ https://dribbble.com/shots/1677163-Menu portifolio
   </div>
 </section>
 <!--<div class="footer" id="footer">This will always appear at the bottom of the page, but <strong>not fixed</strong>.</div>-->
-<iframe src="../footer.html" width="100%" height="300px"></iframe>   
+<iframe src="footer.html" width="100%" height="300px"></iframe>   
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script src='https://unpkg.com/ionicons@5.0.0/dist/ionicons.js'></script>
