--- a/index.html
+++ b/index.html
@@ -210,11 +210,11 @@ src="https://www.youtube.com/embed/SlkpxNBbX_0">
             <!-- video -->
         </div>
         <div>  <!--https://paulrhayes.com/2009-07/animated-css3-cube-interface-using-3d-transforms/-->
-            <h2><a href="/Home_star_wars.html" target="_top"><span style="color:#E3E305 ;">API Star Wars</span></a></h2></br>
+            <h2><a href="./Home_star_wars.html" target="_top"><span style="color:#E3E305 ;">API Star Wars</span></a></h2></br>
             <time>25 de Abril 2021</time>
             <p>Por Leo Faria</p>
             <p>"Uma APi simples, que busca informações dos personagens do universo <span style="color:#E3E305 ;">Star Wars</span>."</p>
-            <p>Acesse: <a href="/Home_star_wars.html" target="_top"> E saiba mais...</a></p>
+            <p>Acesse: <a href="./Home_star_wars.html" target="_top"> E saiba mais...</a></p>
         </div>
         <div>
             <p>Projeto e construção de <span style="color: dodgerblue;">websites</span> e <span style="color:#E3E305 ;">Apps Mobile</span></p>
@@ -257,7 +257,7 @@ https://dribbble.com/shots/1677163-Menu portifolio
  </div>
  <div id="floatclose" class="floatclose" onclick="closeweb()"><h5 style="color: antiquewhite;"><a href="#portifolio">X - FECHAR | VOLTAR </br>PARA MENU MOBILE</a></h5></div>
  <div id="mobile_up">
-   <iframe id="ifr" name="ifr" src="celphone.html" width="100%" height="700px" ></iframe> 
+   <iframe id="ifr" name="ifr" src="./celphone.html" width="100%" height="700px" ></iframe> 
 </div>
  
 <!--projects style="display: none;
@@ -375,7 +375,7 @@ https://dribbble.com/shots/1677163-Menu portifolio
 
      fim projects--> 
      <div id="portifolioweb">
-     <iframe src="Projetos.html" width="100%" height="700px"></iframe> 
+     <iframe src="./Projetos.html" width="100%" height="700px"></iframe> 
      </div>
 <section id="contato"></section>
 
@@ -439,7 +439,7 @@ https://dribbble.com/shots/1677163-Menu portifolio
   </div>
 </section>
 <!--<div class="footer" id="footer">This will always appear at the bottom of the page, but <strong>not fixed</strong>.</div>-->
-<iframe src="footer.html" width="100%" height="300px"></iframe>   
+<iframe src="./footer.html" width="100%" height="300px"></iframe>   
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script src='https://unpkg.com/ionicons@5.0.0/dist/ionicons.js'></script>
