--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ https://dribbble.com/shots/1677163-Menu portifolio
 
      fim projects--> 
      <div id="portifolioweb">
-     <iframe src="./Projetos.html" width="100%" height="700px"></iframe> 
+     <iframe src="./projetos.html" width="100%" height="700px"></iframe> 
      </div>
 <section id="contato"></section>
 
