Update Footer em Projects

--- a/projetos.html
+++ b/projetos.html
@@ -37,13 +37,13 @@
       <div class="cards__wrapper">
         <div class="card current--card">
           <div class="card__image">
-            <img src="\assets\w_guitars_construtor.png" alt="" /> <!--https://source.unsplash.com/Z8dtTatMVMw-->
+            <img src=".\assets\w_guitars_construtor.png" alt="" /> <!--https://source.unsplash.com/Z8dtTatMVMw-->
           </div>
         </div>
   
         <div class="card next--card">
           <div class="card__image">
-            <img src="\assets\photo-1563722680966-fd2b17fc0ddf.jpg" alt="" />
+            <img src=".\assets\photo-1563722680966-fd2b17fc0ddf.jpg" alt="" />
           </div>
         </div>
   
