--- a/footer.html
+++ b/footer.html
@@ -289,7 +289,7 @@ body .footer .content > div .image {
       <div><b>Spotha</b><a href='#'>Miskasa</a><a href='#'>Agithe</a><a href='#'>Scesha</a><a href='#'>Lulle</a></div>
       <div><b>Chashakib</b><a href='#'>Chogauw</a><a href='#'>Phachuled</a><a href='#'>Tiebeft</a><a href='#'>Ocid</a><a href='#'>Izom</a><a href='#'>Ort</a></div>
       -->
-      <div><b>Em construção</b><a href='#'>Pamuz</a><a href='#'></a><a href='#'></a><a href='#'> \o/</a></div>
+      <div><b>Em construção</b><a href='#'></a><a href='#'></a><a href='#'></a><a href='#'> \o/</a></div>
     </div>
     <div><a class='image' href='#' target='_blank' style='background-image: url(/assets/happy.svg)'></a>
         <!--&amp;quot;https://s3-us-west-2.amazonaws.com/s.cdpn.io/199011/happy.svg&amp;quot;-->
