--- a/index.html
+++ b/index.html
@@ -204,17 +204,15 @@
            
         </div>
         <div><!-- width="640" height="520" -->
-          <iframe width="350" height="350"
-src="https://www.youtube.com/embed/SlkpxNBbX_0">
-</iframe>
+          <iframe width="350" height="350" src="https://www.youtube.com/embed/SlkpxNBbX_0"></iframe>
             <!-- video -->
         </div>
-        <div>  <!--https://paulrhayes.com/2009-07/animated-css3-cube-interface-using-3d-transforms/-->
-            <h2><a href="./Home_star_wars.html" target="_top"><span style="color:#E3E305 ;">API Star Wars</span></a></h2></br>
+        <div> 
+            <h2><a href="https://leofaria01.github.io/starwarsapi/" target="_top"><span style="color:#E3E305 ;">API Star Wars</span></a></h2></br>
             <time>25 de Abril 2021</time>
             <p>Por Leo Faria</p>
             <p>"Uma APi simples, que busca informações dos personagens do universo <span style="color:#E3E305 ;">Star Wars</span>."</p>
-            <p>Acesse: <a href="./Home_star_wars.html" target="_top"> E saiba mais...</a></p>
+            <p>Acesse: <a href="https://leofaria01.github.io/starwarsapi/" target="_top"> E saiba mais...</a></p>
         </div>
         <div>
             <p>Projeto e construção de <span style="color: dodgerblue;">websites</span> e <span style="color:#E3E305 ;">Apps Mobile</span></p>
@@ -225,7 +223,7 @@ src="https://www.youtube.com/embed/SlkpxNBbX_0">
     </section>
 </article>
     </div>
-    <!--
+<!--
 Inspired by this dribble by The Purple Bunny:
 https://dribbble.com/shots/1677163-Menu portifolio
 -->
